# alucard

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
alucard/: __init__.py  app.py  convert.py  dataset.py  model.py  precompute_embeddings.py  sample.py  train.py
notebooks/: kaggle_train.ipynb
scripts/: build_dataset.py  fix_captions_and_embed.py  process_extra_sources.py  vastai_train.sh
tests/: test_model.py
